--- a/_cleaned_tex-sourcefiles/MY451_8.tex
+++ b/_cleaned_tex-sourcefiles/MY451_8.tex
@@ -1594,13 +1594,13 @@ Felix, qui potuit rerum cognoscere causas,\\
 atque metus omnis et inexorabile fatum\\
 subiecit pedibus strepitumque Acherontis avari
 
-\vspace*{1ex}
+
 Blessed is he whose mind had power to probe\\
 The causes of things and trample underfoot\\
 All terrors and inexorable fate\\
 And the clamour of devouring Acheron
 
-\vspace*{1ex}
+
 (Publius Vergilius Maro: \emph{Georgica} (37-30 BCE), 2.490-492;\\
 translation by L.\ P.\ Wilkinson)
 \end{verse}
@@ -1808,7 +1808,7 @@ School enrolment (\%) & -0.139 & 0.014 & -9.87 & $<0.001$& (-0.167;
 Control of corruption & -0.046 & 0.008 & -5.53 & $<0.001$& (-0.062;
 -0.029)\\
 Income inequality & 0.055 & 0.022 & 2.50 & 0.014 & (0.011; 0.098)\\ \hline
-\multicolumn{6}{|l|}{\vspace*{-1.5ex}}\\
+\multicolumn{6}{|l|}{}\\
 \multicolumn{6}{|l|}{$\hat{\sigma}=2.23$; $R^{2}=0.692$; $n=111$; $df=107$}\\
 \hline
 \end{tabular}
@@ -2308,7 +2308,7 @@ Middle & $-3.210$ & 0.631 & $-5.09$ & $<0.001$ & $(-4.461;
 High & $-3.296$ & 1.039 & $-3.17$ & 0.002 & $(-5.357;
 -1.235)$\\
  \hline
-\multicolumn{6}{|l|}{\vspace*{-1.5ex}}\\
+\multicolumn{6}{|l|}{}\\
 \multicolumn{6}{|l|}{
 $\hat{\sigma}=2.01$; $R^{2}=0.753$; $n=111$; $df=105$}\\
 \hline
