--- a/_cleaned_tex-sourcefiles/MY451_9.tex
+++ b/_cleaned_tex-sourcefiles/MY451_9.tex
@@ -61,7 +61,7 @@ Total & 2439 & 1154 & 32.1 & 3593 \\
 \multicolumn{5}{l}{{\small $\chi^{2}=38.4$, $df=1$, $P<0.001$}}
 \end{tabular}
 \end{center}
-\vspace*{-2ex}
+
 \end{table}
 
 The percentages in Table \ref{t_berkeley1} show that men were more
@@ -177,7 +177,7 @@ Number of applicants & 585 & 918 & 792 & 584 & 714 \\
 \hline
 \end{tabular}
 \end{center}
-\vspace*{-2ex}
+
 \end{table}
 
 One possible set of causal connections leading to a spurious association
@@ -338,7 +338,7 @@ The numbers below the frequencies are proportions within rows.
 & & \multicolumn{2}{|c|}{Survivor} & \\
 Class & Group & Yes & No & Total \\
 \hline
-\multicolumn{5}{l}{\vspace*{-2ex}}
+\multicolumn{5}{l}{}
 \\ \hline
 First & Man & 57 & 118 & 175 \\
 &  & 0.326 & 0.674 & 1.000 \\
@@ -347,7 +347,7 @@ First & Man & 57 & 118 & 175 \\
 & Total & 203 & 122 & 325 \\
 &  & 0.625 & 0.375 & 1.000 \\
 \hline
-\multicolumn{5}{l}{\vspace*{-2ex}}
+\multicolumn{5}{l}{}
 \\ \hline
 Second & Man & 14 & 154 & 168 \\
 &  & 0.083 & 0.917 & 1.000 \\
@@ -355,14 +355,14 @@ Second & Man & 14 & 154 & 168 \\
 &  & 0.889 & 0.111 & 1.000 \\ \hline
 & Total & 118 & 167 & 285 \\
 &  & 0.414 & 0.586 & 1.000 \\
-\hline \multicolumn{5}{l}{\vspace*{-2ex}}\\ \hline
+\hline \multicolumn{5}{l}{}\\ \hline
 Third & Man & 75 & 387 & 462 \\
 &  & 0.162 & 0.838 & 1.000 \\
 & Woman or child & 103 & 141 & 244 \\
 &  & 0.422 & 0.578 & 1.000 \\ \hline
 & Total & 178 & 528 & 706 \\
 &  & 0.252 & 0.748 & 1.000 \\
-\hline \multicolumn{5}{l}{\vspace*{-2ex}}\\ \hline
+\hline \multicolumn{5}{l}{}\\ \hline
 Total & & 499 & 817 & 1316 \\
 &  & 0.379 & 0.621 & 1.000 \\
 \hline
@@ -525,7 +525,7 @@ Age group & Smokers & Nonsmokers & Smokers & Nonsmokers \\ \hline
 All age groups & 76.1 & 68.6 & 582 & 732 \\ \hline
 \end{tabular}
 \end{center}
-\vspace*{-2ex}
+
 \end{table}
 
 The two-way tables of age by survival and age by smoking are shown side
